[project]
name = "antares-timeseries-generation"
version = "0.1.1"
license = {text="MPL-2.0"}
description = 'Timeseries generation library aiming at creating input data for Antares simulator studies.'
readme = "README.md"
dependencies = [ "numpy", "pandas", "PyYAML" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]
