[project]
name = "antares-timeseries-generation"
version = "0.1.8"
license = {text="MPL-2.0"}
description = 'Timeseries generation library aiming at creating input data for Antares simulator studies.'
readme = "README.md"
dependencies = [ "numpy", "pandas", "PyYAML" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]

[tool.black]
target-version = ["py38"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]
skip_gitignore = true
